--- a/requirementsFront.txt
+++ b/requirementsFront.txt
@@ -1,4 +1,5 @@
 bcrypt==3.1.7
+blinker==1.4
 certifi==2019.11.28
 cffi==1.14.5
 Click==7.0
@@ -10,10 +11,14 @@ Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 idna==3.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
+MarkupSafe==1.1.1
+mysql-connector-python==8.0.23
 Pillow==7.0.0
+protobuf==3.15.5
 pycparser==2.20
 six==1.14.0
 SQLAlchemy==1.3.23
