--- a/requirementsFront.txt
+++ b/requirementsFront.txt
@@ -1,10 +1,27 @@
+attrs==19.3.0
+Automat==0.8.0
+awscli==1.18.69
 bcrypt==3.1.7
 blinker==1.4
+botocore==1.16.19
 certifi==2019.11.28
 cffi==1.14.5
+chardet==3.0.4
 Click==7.0
+cloud-init==20.4
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.8
+dbus-python==1.2.16
+distro==1.4.0
+distro-info===0.23ubuntu1
 dnspython==2.1.0
+docutils==0.16
+ec2-hibinit-agent==1.0.0
 email-validator==1.1.2
+entrypoints==0.3
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
@@ -12,15 +29,77 @@ Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 gunicorn==20.0.4
+hibagent==1.0.1
+httplib2==0.14.0
+hyperlink==19.0.0
 idna==3.1
+importlib-metadata==1.5.0
+incremental==16.10.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
+jmespath==0.9.4
+joblib==1.0.1
+jsonpatch==1.22
+jsonpointer==2.0
+jsonschema==3.2.0
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
 MarkupSafe==1.1.1
+more-itertools==4.2.0
 mysql-connector-python==8.0.23
+neo4j==4.2.1
+netifaces==0.10.4
+numpy==1.20.1
+oauthlib==3.1.0
+olefile==0.46
+pandas==1.2.3
+pexpect==4.6.0
 Pillow==7.0.0
 protobuf==3.15.5
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
 pycparser==2.20
+Pygments==2.3.1
+PyGObject==3.36.0
+PyHamcrest==1.9.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyrsistent==0.15.5
+pyserial==3.4
+python-apt==2.0.0+ubuntu0.20.4.4
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+pytz==2021.1
+PyYAML==5.3.1
+requests==2.22.0
+requests-unixsocket==0.2.0
+roman==2.0.0
+rsa==4.0
+s3transfer==0.3.3
+scikit-learn==0.24.1
+scipy==1.6.2
+SecretStorage==2.3.1
+service-identity==18.1.0
+simplejson==3.16.0
 six==1.14.0
+sklearn==0.0
+sos==4.0
 SQLAlchemy==1.3.23
+ssh-import-id==5.10
+systemd-python==234
+threadpoolctl==2.1.0
+Twisted==18.9.0
+ubuntu-advantage-tools==20.3
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+wadllib==1.3.3
 Werkzeug==1.0.1
 WTForms==2.3.3
+zipp==1.0.0
+zope.interface==4.7.1
